--- a/about-me.html
+++ b/about-me.html
@@ -6,9 +6,9 @@
     <title>Big Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="home">
     <header>
-            <h1>Header</h1>
+            <h1>About Me</h1>
             <nav>
     
                 <a href="/">Home</a>
@@ -21,7 +21,7 @@
 
 
     <main>
-        <img src="/images/felicis.jpg" width="1000" height="1000" alt="Main Image">
+        <img  src="/images/felicis.jpg" width="1000" height="1000" alt="Main Image">
         <h1>Heading</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti id, voluptatem asperiores dicta iure placeat sed aliquid aperiam ducimus tempore mollitia illo excepturi veniam qui quos soluta eligendi. Eius, minima.</p>
         <img src="/images/felicis.jpg" width="100" height="100" alt="Main Image">
