--- a/about-me.html
+++ b/about-me.html
@@ -6,7 +6,7 @@
     <title>Big Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body id="home">
+<body id="about-me">
     <header>
             <h1>About Me</h1>
             <nav>
