--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Big Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id = "home">
     <header>
             <h1>Home</h1>
             <nav>
