--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
     <main>
-        <img src="/images/felicis.jpg" width="1000" height="1000" alt="Main Image">
+        <img src="/images/markus-spiske-6pflEeSzGUo-unsplash.jpg"  alt="Markus Spiske">
         <h1>Heading</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti id, voluptatem asperiores dicta iure placeat sed aliquid aperiam ducimus tempore mollitia illo excepturi veniam qui quos soluta eligendi. Eius, minima.</p>
         <img src="/images/felicis.jpg" width="100" height="100" alt="Main Image">
