added local images test

--- a/about-me.html
+++ b/about-me.html
@@ -21,10 +21,10 @@
 
 
     <main>
-        <img  src="/images/jainath-ponnala-JhRCdTfRy8g-unsplash.jpg" alt=" Image by jainath-ponnala">
+        <img  src="./images/jainath-ponnala-JhRCdTfRy8g-unsplash.jpg" alt=" Image by jainath-ponnala">
         <h1>Heading</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti id, voluptatem asperiores dicta iure placeat sed aliquid aperiam ducimus tempore mollitia illo excepturi veniam qui quos soluta eligendi. Eius, minima.</p>
-        <img src="/images/felicis.jpg" width="100" height="100" alt="Main Image">
+        <img src="./images/felicis.jpg" width="100" height="100" alt="Main Image">
 
     </main>
 
