--- a/about-me.html
+++ b/about-me.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Big Website</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="about-me">
@@ -11,20 +11,36 @@
             <h1>About Me</h1>
             <nav>
     
-                <a href="/">Home</a>
+                <a href="/index.html">Home</a>
                 <a href="/about-me.html">About</a>
-                <a href="">Project</a>
-                <a href="">Contact</a>
+                <a href="/contact-me.html">Contact Me</a>
             </nav>
     </header>
 
 
 
     <main>
-        <img  src="./images/jainath-ponnala-JhRCdTfRy8g-unsplash.jpg" alt=" Image by jainath-ponnala">
+        <img  src="/images/jainath-ponnala-JhRCdTfRy8g-unsplash.jpg" alt=" Image by jainath-ponnala">
         <h1>Heading</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti id, voluptatem asperiores dicta iure placeat sed aliquid aperiam ducimus tempore mollitia illo excepturi veniam qui quos soluta eligendi. Eius, minima.</p>
-        <img src="./images/felicis.jpg" width="100" height="100" alt="Main Image">
+        
+        <div class = "felicis">
+        <img src="/images/felicis.jpg" width="100" height="100" alt="Main Image">
+        </div>
+        <h2>Programming Languages</h2>
+        <ul>
+            <li>Python</li>
+            <li>Java</li>
+            <li>CSS</li>
+            <li>Html</li>
+          </ul>
+
+          <h2>Work Experience</h2>
+        <ul>
+            <li>Babysitting</li>
+            <li>Java Programming</li>
+            <li>Cashier</li>
+          </ul>
 
     </main>
 
