--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
             <h1>Home</h1>
             <nav>
     
-                <a href="/">Home</a>
+                <a href="/index.html">Home</a>
                 <a href="/about-me.html">About</a>
-                <a href="">Project</a>
-                <a href="">Contact</a>
+                <a href="/contact-me.html">Contact Me</a>
             </nav>
     </header>
 
