--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
     <main>
         <img src="/images/markus-spiske-6pflEeSzGUo-unsplash.jpg"  alt="Markus Spiske">
-        <h1>Heading</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti id, voluptatem asperiores dicta iure placeat sed aliquid aperiam ducimus tempore mollitia illo excepturi veniam qui quos soluta eligendi. Eius, minima.</p>
-        <img src="/images/felicis.jpg" width="100" height="100" alt="Main Image">
+        <h1>Welcome</h1>
+        <p>I'm Jessica Amy (Jesso) I'm 27 years old I have been interested in computers since a young age. Im interested in programming and computer networking. I'm studying web development. This is my portfolio. Bellow is my stuffed panda felicis she is popular in many discord communities.</p>
+        <img src="/images/felicis.jpg" width="100" height="100" alt="Felicis the panda">
 
     </main>
 
     <footer>
-        Footer
+        &copy; Jessica Amy 2024
     </footer>
 </body>
 </html>
