12/11/2024 added proper information where placeholders were and corrections

--- a/about-me.html
+++ b/about-me.html
@@ -21,8 +21,8 @@
 
     <main>
         <img  src="/images/jainath-ponnala-JhRCdTfRy8g-unsplash.jpg" alt=" Image by jainath-ponnala">
-        <h1>Heading</h1>
-        <p>I'm Jessica Amy (Jesso) I'm 27 years old I have been interested in computers since a young age. Im interested in programming and computer networking. I'm studying web development. This is my portfolio. Bellow is my stuffed panda felicis she is popular in many discord communities. I've been coding since I was 13 years old bellow are my projects and programming languages aswell as my expierience bellow. </p>
+        <h1>About Me</h1>
+        <p>I'm Jessica Amy (Jesso) I'm 27 years old I have been interested in computers since a young age. Im interested in programming and computer networking. I'm studying web development. This is my portfolio. Bellow is my stuffed panda Felicis she is popular in many discord communities. I've been coding since I was 13 years old bellow are my projects and programming languages aswell as my expierience bellow. </p>
         
         <div class = "felicis">
         <img src="/images/felicis.jpg" width="100" height="100" alt="Main Felicis the panda">
@@ -45,7 +45,7 @@
           <h2>Projects</h2>
           <ul>
               <li><a href="https://felic.is">Felic.is</a></li>
-              <li><a href="https://felicisin.space">Felicis in space</a></li>
+              <li><a href="https://felicisin.space">Felicisin.space</a></li>
             </ul>
     </main>
 
