--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <img src="/images/markus-spiske-6pflEeSzGUo-unsplash.jpg"  alt="Markus Spiske">
         <h1>Welcome</h1>
-        <p>I'm Jessica Amy (Jesso) I'm 27 years old I have been interested in computers since a young age. Im interested in programming and computer networking. I'm studying web development. This is my portfolio. Bellow is my stuffed panda felicis she is popular in many discord communities.</p>
+        <p>I'm Jessica Amy (Jesso) I'm 27 years old I have been interested in computers since a young age. Im interested in programming and computer networking. I'm studying web development. This is my portfolio. Bellow is my stuffed panda Felicis she is popular in many discord communities.</p>
         <img src="/images/felicis.jpg" width="100" height="100" alt="Felicis the panda">
 
     </main>
